src/components/common/Footer/index.scss
footer#footer {
  background-color: color('foreground', 'dark');
  height: $footer-height;
  position: absolute;
  right: 0;
  bottom: 0;
  left: 0;

  .btn.page-tab {
    @include rounded-indiv(0px, 0px, 2px, 2px);
    font-weight: 600;
    @include box-shadow(0px, 0px, 0px, #000, true);

    &--active {
      background-color: color('background');
      cursor: default;
      @include box-shadow(0px, 0px, 0px, #000, true);

      &:hover {
        background-color: color('background');
      }
    }

    .fa {
      margin-left: 7px;
    }
  }

  .addPageMenu {
    bottom: -3px;

    // Important is necessary, because I'm overriding inline styles
    button, .smallButton div, .smallButton span {
      border-radius: 2px !important;
      width: 48px !important;
      height: 48px !important;

      div {

        svg:first-child {
          height: 100% !important;
          line-height: 100% !important;
        }
      }
    }

    .addPageBackdrop {
      background: none;
      left: 0;
      > a {
        background: none !important;
      }
    }
  }
}

